# sla-qt-tester

./: .env.example  .gitignore  AGENTS.md  README.md  USAGE.md  test_auto_ai_analysis.py
backend/: api.py  config.py  static_analysis_api.py  window.py
core/ai/: __init__.py  deepseek_client.py
core/database/: db_manager.py
core/qt_project/: __init__.py  cppcheck_manager.py  file_tree.py  scanner.py  static_analyzer.py  test_analyzer.py  unit_test_runner.py  unit_test_scanner.py
core/vision/: PIPELINE_USER_GUIDE.md  __init__.py  feature_matcher.py  pipeline.py  template_matcher.py
core/vision/examples/: demo_pipeline.json
docs/: STATIC_ANALYSIS.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: file.ts  py.ts  qt-project.ts  static-analysis.ts  unit-test.ts
frontend/src/components/: AboutContent.tsx  FilePreview.tsx  FileTree.tsx  Modal.tsx  StaticAnalysisPanel.tsx  TestHistoryPanel.tsx  UnitTestPanel.tsx
playground/diagramscene_ultima/.qtcreator/: CMakeLists.txt.user.d0013f3  diagramscene.pro.user.5026f1e
playground/diagramscene_ultima/tests/: CMakeLists.txt  test_diagrampath.cpp  test_ui_interaction.cpp  untitled.pro
